--- a/shelter/public/scss/styles.scss
+++ b/shelter/public/scss/styles.scss
@@ -451,6 +451,10 @@ h5 {
       display: block;
       margin: 0 auto 30px;
     }
+
+    &-title {
+      text-align: center;
+    }
   }
 }
 
